--- a/src/shared/components/Layout/Layout.module.scss
+++ b/src/shared/components/Layout/Layout.module.scss
@@ -1,6 +1,17 @@
 .layout {
-  min-height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
+	min-height: 100vh;
+	width: 100vw;
+	display: flex;
+	flex-direction: column;
+}
+
+.mobileContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+	padding: 0 20px;
+	box-sizing: border-box;
+	text-align: center;
 }
