--- a/src/widgets/DownloadButton/DownloadButton.module.scss
+++ b/src/widgets/DownloadButton/DownloadButton.module.scss
@@ -127,3 +127,11 @@
     transform: rotate(-5deg);
   }
 }
+
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    left: 15%;
+  }
+}
+
