--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: center;
   background-color: $dark-bg;
-  padding: 150px 32px;
+  padding: 100px 32px;
 
   .content {
     display: flex;
@@ -54,7 +54,7 @@
     .badges {
       position: absolute;
       top: 10%;
-      left: 90%;
+      left: 100%;
       transform: translateX(-50%);
       display: flex;
       flex-direction: column;
@@ -86,7 +86,89 @@
     .badge:nth-child(3) {
       animation-delay: 0.6s;
       background-color: $white;
-      color: $dark-bg
+      color: $dark-bg;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .content {
+      flex-direction: column;
+      text-align: center;
+    }
+
+    .text {
+      max-width: 100%;
+      margin-bottom: 20px;
+
+      h1 {
+        font-size: 36px;
+      }
+
+      p {
+        font-size: 16px;
+      }
+    }
+
+    .image {
+      img {
+        width: 250px;
+      }
+
+      .badges {
+        top: auto;
+        left: 50%;
+        bottom: -50px;
+        transform: translateX(-50%);
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    padding: 80px 20px;
+
+    .text {
+      h1 {
+        font-size: 30px;
+      }
+
+      p {
+        font-size: 14px;
+      }
+    }
+
+    .image {
+      img {
+        width: 200px;
+      }
+
+      .badges {
+        bottom: -40px;
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    padding: 60px 16px;
+
+    .text {
+      h1 {
+        font-size: 26px;
+      }
+
+      p {
+        font-size: 13px;
+      }
+    }
+
+    .image {
+      img {
+        width: 180px;
+      }
+
+      .badges {
+        bottom: -60px;
+        left: 150px;
+      }
     }
   }
 }
