fix: fixed badges

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -166,8 +166,8 @@
       }
 
       .badges {
-        bottom: -60px;
-        left: 150px;
+        top: 50px;
+        left: 200px;
       }
     }
   }
